[gd_scene load_steps=2 format=3 uid="uid://sprite-fish1"]

[ext_resource type="SpriteFrames" uid="uid://7742506918418751057" path="res://costumes/Animation-fish1.tres" id="frames-fish1"]
[ext_resource type="Script" path="res://scripts/sprite-fish1.gd" id="id_sprite-fish1"]
[ext_resource type="Shader" path="res://assets/effects.gdshader" id="id_shader_fish1"]
[ext_resource type="PackedScene" uid="uid://bubble" path="res://assets/bubble.tscn" id="bubble"]
[ext_resource type="Script" path="res://scripts/fish1-event_whenflagclicked-fu69s.gd" id="id_fish1-event_whenflagclicked-fu69s"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fish1"]
shader = ExtResource("id_shader_fish1")
shader_parameter/color_shift = 0.0
shader_parameter/fisheye = 0.0
shader_parameter/whirl = 0.0
shader_parameter/pixelate = 0.0
shader_parameter/mosaic = 0.0
shader_parameter/brightness = 0.0
shader_parameter/ghost = 0.0
shader_parameter/sprite_size = 10.0

[node name="fish1" type="Node2D"]
material = SubResource("ShaderMaterial_fish1")
script = ExtResource("id_sprite-fish1")
[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("frames-fish1")
animation = &"fishTile_079"
[node name="CharacterBody2D" type="CharacterBody2D" parent="Sprite"]
[node name="Collision-fishTile_079" type="CollisionPolygon2D" parent="Sprite/CharacterBody2D"]
polygon = PackedVector2Array(41, 8, 40, 9, 36, 9, 35, 10, 33, 10, 32, 11, 31, 11, 30, 12, 29, 12, 28, 13, 27, 13, 26, 14, 25, 14, 24, 15, 23, 15, 22, 16, 22, 17, 21, 18, 21, 21, 22, 22, 22, 23, 21, 24, 18, 21, 17, 21, 16, 20, 10, 20, 8, 22, 8, 23, 5, 26, 5, 27, 3, 29, 3, 30, 2, 31, 2, 36, 3, 37, 3, 38, 6, 41, 6, 42, 11, 47, 15, 47, 16, 46, 17, 46, 19, 44, 22, 44, 23, 45, 23, 50, 25, 52, 26, 52, 27, 53, 29, 53, 30, 54, 32, 54, 33, 55, 47, 55, 49, 53, 49, 52, 50, 51, 55, 51, 57, 49, 57, 48, 59, 46, 59, 44, 60, 43, 60, 41, 61, 40, 61, 27, 60, 26, 60, 24, 59, 23, 59, 21, 57, 19, 57, 18, 56, 17, 55, 17, 54, 16, 53, 16, 52, 15, 52, 9, 51, 8, 41, 8)
position = Vector2(-32, -32)
[node name="bubble" parent="." instance=ExtResource("bubble")]
visible = false
scale = Vector2(0.6, 0.6)
[node name="scripts" type="Node2D" parent="Sprite"]
[node name="event_whenflagclicked-fu69s" type="Node2D" parent="Sprite/scripts"]
script = ExtResource("id_fish1-event_whenflagclicked-fu69s")